# mitigating_seasonal_invariance_for_uav_geo_localization

./: .gitignore  README.md  pyproject.toml  requirements.txt
Sample4Geo/: eval_cross_season.py  eval_seasonal.py  preprocess_uavvisloc.py  requirements.txt  train_denseuav.py  train_denseuav_seasonal.py  train_sues200.py  train_uavvisloc.py  train_uavvisloc_seasonal.py  train_university.py  train_university1652_seasonal.py
Sample4Geo/sample4geo/: loss_multipositive.py
seasonal_augmentation/: README.md  requirements.txt
seasonal_augmentation/configs/: datasets.yaml  datasets_vastai.yaml  summer_to_autumn.yaml  summer_to_spring.yaml  summer_to_winter.yaml
seasonal_augmentation/scripts/: batch_generate.py  compare_ip2p_vs_multicontrolnet.py  consistency.py  estimate_depth.py  evaluate_consistency.py  generate_controlnet.py  generate_for_dataset.py  generate_instructpix2pix.py  generate_multicontrolnet.py  pack_for_vastai.sh  prepare_drive_subset.py  prepare_for_sample4geo.py  prepare_multiseasonal.py  setup_diffusionsat.sh  test_diffusionsat.py  vastai_setup.sh
seasonalgeo/: __init__.py
seasonalgeo/configs/: arcgis.yaml  planet.yaml  sentinel2.yaml
seasonalgeo/models/: __init__.py  schema.py
seasonalgeo/parsers/: __init__.py  base.py  denseuav.py  sues200.py  uavvisloc.py  university1652.py
seasonalgeo/providers/: __init__.py  arcgis.py  base.py  gee_sentinel2.py  planet.py  retriever.py
seasonalgeo/scripts/: s01_parse_datasets.py  s02_retrieve_imagery.py  s03_format_dataset.py
seasonalgeo/utils/: __init__.py  geo.py  seasons.py
(+9 files in other folders)
